# mongo-wizard

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  REFACTORING.md  mongo_wizard.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.sh  setup.py  test_performance.py
.github/workflows/: release.yml  test.yml
db_wizard/: __init__.py  __main__.py  backup.py  cli.py  constants.py  engine.py  formatting.py  settings.py  storage.py  system_checks.py  task_runner.py  tunnel.py  utils.py  wizard.py
db_wizard/engines/: __init__.py  mongo.py  mysql.py  postgres.py  redis.py
db_wizard/flows/: _common.py  backup_flow.py  browse_flow.py  copy_flow.py  manage_hosts.py  manage_storages.py  manage_tasks.py  restore_flow.py  selection.py
examples/: basic_usage.py  quick_start.py
mongo_wizard/: __init__.py  __main__.py  backup.py  cli.py  constants.py  core.py  settings.py  storage.py  task_runner.py  utils.py  wizard.py
tests/: __init__.py  test_backup.py  test_bugfixes.py  test_connection.py  test_db_wizard.py  test_flows.py  test_formatting.py  test_full_integration.py  test_integration.py  test_mysql_engine.py  test_settings.py  test_storage.py  test_utils.py
