[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "db-wizard"
version = "2.1.3"
description = "Advanced database copy and migration tool - supports MongoDB, MySQL, PostgreSQL, Redis"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Sathia Musso"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.0.0",
    "pymongo>=4.0.0",
    "rich>=14.0.0",
    "paramiko>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
db-wizard = "db_wizard.cli:main"
dbw = "db_wizard.cli:main"

[project.urls]
Homepage = "https://github.com/sathia-musso/db-wizard"
Issues = "https://github.com/sathia-musso/db-wizard/issues"
Repository = "https://github.com/sathia-musso/db-wizard"

[tool.setuptools]
packages = ["db_wizard", "db_wizard.engines", "db_wizard.flows"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
